# coding-fundamentals

./: .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml  poetry.toml  pyproject.toml
about/: index.html
css/: extra.css
docs/: about.md  index.md
docs/episodes/: python-matplotlib.md  python-pandas.md
episodes/python-matplotlib/: index.html
episodes/python-pandas/: index.html
episodes/python-poetry/: index.html
search/: search_index.json
